--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -32,7 +32,7 @@ endif()
 
 # Projects supported via LLVM_EXTERNAL_*_SOURCE_DIR need to be explicitly
 # specified.
-add_llvm_external_project(clang)
+#add_llvm_external_project(clang)
 add_llvm_external_project(llgo)
 add_llvm_external_project(lld)
 add_llvm_external_project(lldb)
